--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,29 @@
 @tailwind utilities;
 
 body {
-  @apply bg-gray-700;
+  @apply bg-gray;
+}
+
+@layer utilities {
+  .btn {
+    @apply bg-main
+        py-3
+        w-full
+        rounded-2xl
+        text-white
+        font-bold
+        hover:bg-main-dark;
+  }
+  ,
+  .input {
+    @apply w-full
+      bg-gray-dark
+      border-gray-light border-2
+      my-5
+      text-white text-center
+      rounded-2xl
+      px-2
+      py-3
+      focus:outline-none;
+  }
 }
