--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,6 @@ body {
         font-bold
         hover:bg-main-dark;
   }
-  ,
   .input {
     @apply w-full
       bg-gray-dark
@@ -27,5 +26,15 @@ body {
       px-2
       py-3
       focus:outline-none;
+  }
+  .action-btn {
+    @apply border-gray-light border-2 
+    rounded-2xl p-2
+    w-11
+    h-11
+    flex 
+    justify-center 
+    items-center
+    hover:opacity-80;
   }
 }
