The design of the detail page has begun

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,7 @@ body {
     @apply border-gray-light border-2 
     rounded-2xl p-2
     w-11
+    cursor-pointer
     h-11
     flex 
     justify-center 
