--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,17 @@ body {
       focus:outline-none 
       focus:border-main;
   }
+  .item-input {
+    @apply bg-gray-dark
+        border-gray-light border-2
+        my-5
+        text-white text-center
+        rounded-2xl
+        px-2
+        py-3
+        focus:outline-none 
+        focus:border-main;
+  }
   .action-btn {
     @apply border-gray-light border-2 
     rounded-2xl p-2
